# Thesis

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  command.sh  create-all.sh  create-registry.sh  dev.Dockerfile  dns.conf.sh  docker-compose.dev.yaml  docker-compose.dev2.yaml  docker-compose.devcontainer.yaml  docker-compose.prod.one-host.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  dynamic.yml  httpd.Dockerfile  justfile  postCreateCommand.sh  pyproject.toml  tests.Dockerfile  traefik.yml
.devcontainer/: devcontainer.json
agent/: Dockerfile  README.md  pyproject.toml
agent/src/: __main__.py  conf.py  init.py  schemas.py  server.py  settings.example.yml  settings.py  settings.yml
agent/src/db/alembic/: env.py
agent/src/db/alembic/versions/: a80d29c97556_.py
agent/src/grpc/: quota_pb2.py  quota_pb2.pyi  quota_pb2_grpc.py
agent/src/injections/: __init__.py  base.py
agent/src/interceptors/: logging_interceptor.py
agent/src/repos/: docker_repo.py  filesystem_repo.py  quota_repo.py
agent/src/servicers/: auth_servicer.py  quota_servicer.py  resource_servicer.py
agent/src/services/: auth_service.py  quota_service.py  resources_service.py
agent/tests/: conftest.py  test_docker_repo.py  test_resource_service.py
api/: Dockerfile  pyproject.toml
api/src/: __main__.py  conf.py  database.py  integrations.py  server.py  settings.py
protos/: quota.proto
tests/: conftest.py
thesis/: __main__.py  database.py  integrations.py  server.py  settings.py
thesis/db/: __init__.py  mixins.py  user.py  users.py
thesis/injections/: __init__.py  auth_injection.py  base.py  quota_injection.py  session_injection.py  wrapper.py
thesis/interceptors/: logging_interceptor.py
thesis/repositories/: auth_repository.py  quota_repository.py
thesis/schemas/: mixins.py
thesis/servicers/: auth_servicer.py  quota_container.py  quota_repository.py  quota_service.py  quota_servicer.py
utils/: docker-compose.students.yaml
web/: Dockerfile  README.md  alembic.ini  alembic.sh  main.py  pyproject.toml
web/src/: app.py  conf.py  database.py  grpc_connection.py  grpc_pool.py  init.py  schemas.py  settings.example.yml  settings.py  settings.yml  state.py
web/src/api/: deps.py
web/src/api/db/: __init__.py  resource.py  users.py
web/src/api/db/alembic/: env.py
web/src/api/db/alembic/versions/: 17187237806f_.py  1a7519f20188_.py  458576d8546d_.py  4b14d48a9cfe_.py  6112ed30c9d7_.py  6733bf2a4168_.py  81e79de0d203_.py  a8460c223838_.py  ca3906bd1953_.py  cc4c2b9aa5ed_.py  d590b4bf3087_.py  ecea92fc2a3b_.py  f3b23d776759_.py  f4bee921f87f_.py  fbd239e9e091_.py  ff4984cee75c_.py
web/src/api/integrations/: uploadfile.py
web/src/api/repos/: account_repo.py  archive_repo.py  base.py  docker_repo.py  mysql_repo.py  quota_repo.py  security_repo.py  traefik_repo.py  users_repo.py
web/src/api/services/: UploadProjectsService.py  auth_service.py  base.py  project_image_service.py  project_service.py  quota_service.py  resource_service.py  users_service.py
web/src/grpc/: quota_pb2.py  quota_pb2.pyi  quota_pb2_grpc.py
web/src/integrations/: uploadfile.py
web/src/layouts/: base.py
web/src/ui/: depends.py  utils.py
web/src/ui/components/: btn.py  console_log.py  dropdown.py  field.py  list_component.py  log_panel.py  panel.py  toast_component.py  upload_file.py
web/src/ui/layouts/: base.py  layout.py  student.py
web/src/ui/views/: admin_panel.py  console.py  groups.py  images.py  login.py  mysql.py  project.py  students.py  teacher.py  user_projects.py
web/src/ui/views/resources/: shared_resource.py  views.py
web/src/ui/views/users/: projects.py  user_projects.py
web/src/views/: admin_panel.py  console.py  login.py
web/tests/: test_archive_repo.py  test_project_service.py  test_traefik_repo.py
(+28 files in other folders)
